GNOME Bugzilla – Bug 781561
msdk: meson build fails
Last modified: 2017-05-11 06:20:54 UTC
Created attachment 350166 [details] [review] [PATCH] msdk: use a dummy.cpp file to force c++ linking The msdk plugin is linked without libstdc++ in the meson build. Add a dummy.cpp file to force c++ linking.
Created attachment 350167 [details] [review] [PATCH v2] msdk: use a dummy.cpp file to force c++ linking changes since v1: - added link to the meson issue for this - left the autotools build alone
Review of attachment 350167 [details] [review]: LGTM! Should go into 1.12 if possible. Minimal possibility of regressions.
Is this workaround still required with meson 0.40.0 and/or 0.40.1 ?
This was a regression in 0.39 which was fixed in 0.40. We should probably bump the required Meson version instead of doing this now.
I've pushed it into the 1.12 branch now since we don't want to bump the version there, do we? (We traditionally don't bump build deps or any deps really in a stable branch) commit 1d0f9a7f8de2d0f338513fd026fc86c81e7c7040 Author: Scott D Phillips <scott.d.phillips@intel.com> Date: Thu Apr 20 20:18:30 2017 -0700 msdk: use a dummy.cpp file to force c++ linking Add a dummy.cpp file to force c++ linking as required by libmfx.a. I'm certain that the meson build worked for me in the past, but I have no idea how it could have, looking at it now. https://bugzilla.gnome.org/show_bug.cgi?id=781561
Fair enough!
Should this be closed now?
> Should this be closed now? No, will do once we bump the req.
Created attachment 351587 [details] [review] [PATCH] msdk: Declare libmfx.a as a C++ static library Here's a patch for master. We've bumped the meson requirement so the dummy.cpp file isn't needed at all.
commit b2663e12e4b2096264ec18577136b4f22b75c2ca Author: Scott D Phillips <scott.d.phillips@intel.com> Date: Wed May 10 22:29:10 2017 -0700 msdk: Declare libmfx.a as a C++ static library This lets meson know that the overall plugin needs built with C++ linking. https://bugzilla.gnome.org/show_bug.cgi?id=781561
Comment on attachment 350167 [details] [review] [PATCH v2] msdk: use a dummy.cpp file to force c++ linking This we pushed to 1.12 branch.