msdk: use a dummy.cpp file to force c++ linking

Add a dummy.cpp file to force c++ linking as required by libmfx.a.
I'm certain that the meson build worked for me in the past, but I
have no idea how it could have, looking at it now.

https://bugzilla.gnome.org/show_bug.cgi?id=781561