sys/msdk/dummy.cpp
@@ -1,0 +1,3 @@
+/* This file exists to force C++ linking of the msdk plugin in the meson build,
+ * as required by libmfx.a. It can be removed when we depend on a version of
+ * meson which has a fix for https://github.com/mesonbuild/meson/issues/1653 */
